--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <img src="#" width="#" height="#" alt="Логотип магазина Глэйси">
     <nav class="header-navigation">
       <ul>
-        <li><a href="">Каталог</a></li>
-        <li><a href="">Доставка и оплата </a></li>
-        <li><a href="">О Компании </a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка и оплата </a></li>
+        <li><a href="#">О Компании </a></li>
       </ul>
     </nav>
     <ul class="header-button">
@@ -52,10 +52,10 @@
     </div>
     <div class="footer-documentation">
       <ul>
-        <li><a href="">Для поставщиков</a></li>
-        <li><a href="">О производств</a></li>
-        <li><a href="">Наши документы</a></li>
-        <li><a href="">Экологические стандарты</a></li>
+        <li><a href="#">Для поставщиков</a></li>
+        <li><a href="#">О производств</a></li>
+        <li><a href="#">Наши документы</a></li>
+        <li><a href="#">Экологические стандарты</a></li>
       </ul>
     </div>
     <p class="footer-copyright">
