--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <header class="header">
-    <img src="#" width="#" height="#" alt="Логотип магазина Глэйси">
+    <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип магазина Глэйси">
     <nav class="header-navigation">
       <ul>
-        <li><a href="#">Каталог</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
         <li><a href="#">Доставка и оплата </a></li>
         <li><a href="#">О Компании </a></li>
       </ul>
@@ -22,25 +22,37 @@
   </header>
   <section class="activities">
     <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-    <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
-    </p>
-    <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
-    </p>
-    <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
-    </p>
-    <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
-    </p>
-  </section>
+    <div сlass="activities-item">
+      <img src="http://placehold.it/49x49" width="49" height="49">
+      <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
+      </p>
+    </div>
+    <div сlass="activities-item">
+      <img src="http://placehold.it/49x49" width="49" height="49">
+      <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+      </p>
+      </div>
+      <div сlass="activities-item">
+      <img src="http://placehold.it/49x49" width="49" height="49">
+      <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+      </p>
+      </div>
+      <div сlass="activities-item">
+      <img src="http://placehold.it/49x49" width="49" height="49">
+      <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+      </p>
+      </div>
+    </section>
 
   <article class="newsblock">
     <p>Новое в нашем блоге</p>
     <a href="#"><h2>10 способов сервировк фруктовых щербетов кстолу</h2></a>
   </article>
 
-  <section class="newsletter">
+  <div class="newsletter">
     <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
     </p>
-  </section>
+  </div>
   <footer class="footer">
     <div class="footer-social">
       <ul>
@@ -62,8 +74,5 @@
       Сделано в HTML Academy © 2017
     </p>
   </footer>
-
-
-
 </body>
 </html>
