--- a/ catalog.html
+++ b/ catalog.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Document</title>
 </head>
 <body>
   <header class="header-catalog">
-    <a href="index.html"><img src="#" width="#" height="#" alt="Логотип магазина Глэйси"></a>
+    <a href="index.html"><img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип магазина Глэйси"></a>
     <nav class="header-catalog-navigation">
       <ul>
-        <li><button> Каталог</button></li>
-        <li><a href="">Доставка и оплата </a></li>
-        <li><a href="">О Компании </a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Доставка и оплата </a></li>
+        <li><a href="#">О Компании </a></li>
       </ul>
     </nav>
     <ul class="header-catalog-button">
@@ -21,90 +21,91 @@
     </ul>
   </header>
   <main сlass="main-catalog">
-    <nav class="main-catalog-navigation">
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="">Каталог</a></li>
-        <li>Сливочное</li>
-      </ul>
-    </nav>
 
-      <p>с 10 до 20,ежедневно</p>
-      <p>8 812 450-25-25</p>
+      <ul class="breadcrumb">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li class="active">Сливочное</li>
+      </ul>
+
+    <div class="timework">
+      <p class="timework-time">с 10 до 20,ежедневно</p>
+      <p class="timework-tell">8 812 450-25-25</p>
+    </div>
 
     <h1>Сливочное мороженное</h1>
     <ul>
       <li>
-        <p><img src="" width="" height="" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+        <p><img src="http://placehold.it/267x267" width="267267" height="267267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
         </p>
         <p><b>310</b><span>₽/кг</span></p>
-        <a href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+        <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="Сливочно-кофейное с кусочками шоколада">
+        <p><img src="" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
         </p>
         <p><b>380</b><span>₽/кг</span></p>
-        <a href="">Сливочно-кофейное с кусочками шоколада</a>
+        <a href="#">Сливочно-кофейное с кусочками шоколада</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
         </p>
         <p><b>355</b><span>₽/кг</span></p>
-        <a href="">Сливочно-клубничное с присыпкой из белого шоколада</a>
+        <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="Сливочное крем-брюле с карамельной подливкой">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
         </p>
         <p><b>415</b><span>₽/кг</span></p>
-        <a href="">Сливочное крем-брюле с карамельной подливкой</a>
+        <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="Сливочное с брусничным джемом">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с брусничным джемом">
         </p>
         <p><b>325</b><span>₽/кг</span></p>
-        <a href="">Сливочное с брусничным джемом</a>
+        <a href="#">Сливочное с брусничным джемом</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="Сливочно-черничное с цельными ягодами черники">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
         </p>
         <p><b>410</b><span>₽/кг</span></p>
-        <a href="">Сливочно-черничное с цельными ягодами черники</a>
+        <a href="#">Сливочно-черничное с цельными ягодами черники</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="Сливочно-лимонное с карамельной присыпкой">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
         </p>
         <p><b>375</b><span>₽/кг</span></p>
-        <a href="">Сливочно-лимонное с карамельной присыпкой</a>
+        <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="Сливочное с шоколадной стружкой">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с шоколадной стружкой">
         </p>
         <p><b>320</b><span>₽/кг</span></p>
-        <a href="">Сливочное с шоколадной стружкой</a>
+        <a href="#">Сливочное с шоколадной стружкой</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="ливочно-ванильное с кусочками шоколада">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="ливочно-ванильное с кусочками шоколада">
         </p>
         <p><b>440</b><span>₽/кг</span></p>
-        <a href="">ливочно-ванильное с кусочками шоколада</a>
+        <a href="#">С#ливочно-ванильное с кусочками шоколада</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="Сливочноe с ментоловым сиропом">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
         </p>
         <p><b>435</b><span>₽/кг</span></p>
-        <a href="">Сливочноe с ментоловым сиропом</a>
-      </li>
+        <a href="#">Сливочноe с ментоловым сиропом</a>
+      </li>267
       <li>
-        <p><img src="" width="" height="" alt="Сливочное с кусочками черного шоколада">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
         </p>
         <p><b>355</b><span>₽/кг</span></p>
-        <a href="">Сливочное с кусочками черного шоколада</a>
+        <a href="#">Сливочное с кусочками черного шоколада</a>
       </li>
       <li>
-        <p><img src="" width="" height="" alt="Сливочное с мятным сиропом">
+        <p><img src="http://placehold.it/267x267" width="267" height="267" alt="Сливочное с мятным сиропом">
         </p>
         <p><b>420</b><span>₽/кг</span></p>
-        <a href="">Сливочное с мятным сиропом</a>
+        <a href="#">Сливочное с мятным сиропом</a>
       </li>
     </ul>
   </main>
@@ -119,10 +120,10 @@
     </div>
     <div class="footer-documentation">
       <ul>
-        <li><a href="">Для поставщиков</a></li>
-        <li><a href="">О производств</a></li>
-        <li><a href="">Наши документы</a></li>
-        <li><a href="">Экологические стандарты</a></li>
+        <li><a href="#">Для поставщиков</a></li>
+        <li><a href="#">О производств</a></li>
+        <li><a href="#">Наши документы</a></li>
+        <li><a href="#">Экологические стандарты</a></li>
       </ul>
     </div>
     <p class="footer-copyright">
