--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       </div>
     </section>
 
-  <article class="newsblock">
+  <div class="newsblock">
     <p>Новое в нашем блоге</p>
     <a href="#"><h2>10 способов сервировк фруктовых щербетов кстолу</h2></a>
-  </article>
+  </div>
 
   <div class="newsletter">
     <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
