Задание "Работа с графикой"
Экспортировал графику с заданных участках проекта "Глэйси"
Всавил контекстные изображения

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="header">
-    <img src="http://placehold.it/150x100" width="150" height="100" alt="Логотип магазина Глэйси">
+    <img src="img/Logotup.png" width="154" height="64" alt="Логотип магазина Глэйси">
     <nav class="header-navigation">
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
@@ -56,10 +56,18 @@
   <footer class="footer">
     <div class="footer-social">
       <ul>
-                <li><a class="social-button" href="#">Твиттер</a></li>
-                <li><a class="social-button" href="#">В контакте</a></li>
-                <li><a class="social-button" href="#">Фейсбук</a></li>
-                <li><a class="social-button" href="#">Инстаграм</a></li>
+                <li>
+                  <a class="social-button" href="#"><img src="img/logo-tw.png" width="32" height="32" alt="Твиттер"></a>
+                </li>
+                <li>
+                  <a class="social-button" href="#"><img src="img/logo-instagram.png" width="32" height="32" alt="Инстаграм">В контакте</a>
+                </li>
+                <li>
+                  <a class="social-button" href="#"><img src="img/logo-f.png" width="32" height="32" alt="Фейсбук"></a>
+                </li>
+                <li>
+                  <a class="social-button" href="#"><img src="img/logo-vk.png" width="32" height="32" alt="В контакте"></a>
+                </li>
        </ul>
     </div>
     <div class="footer-documentation">
@@ -71,6 +79,7 @@
       </ul>
     </div>
     <p class="footer-copyright">
+      <img src="img/logo-htmlacademy-small.png" width="108" height="39" alt="HTML Academy">
       Сделано в HTML Academy © 2017
     </p>
   </footer>
