Выполнение задания "Работа с графикой"
Для католога "Глэйси" вырезал графику. Всавил контентные изображения

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <a class="social-button" href="#"><img src="img/logo-tw.png" width="32" height="32" alt="Твиттер"></a>
                 </li>
                 <li>
-                  <a class="social-button" href="#"><img src="img/logo-instagram.png" width="32" height="32" alt="Инстаграм">В контакте</a>
+                  <a class="social-button" href="#"><img src="img/logo-instagram.png" width="32" height="32" alt="Инстаграм"></a>
                 </li>
                 <li>
                   <a class="social-button" href="#"><img src="img/logo-f.png" width="32" height="32" alt="Фейсбук"></a>
