Правка задания "Работа с графикой"
Заменил logotup на logo, в img/fon-заменил png на jpg

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="header">
-    <img src="img/Logotup.png" width="154" height="64" alt="Логотип магазина Глэйси">
+    <img src="img/Logo.png" width="154" height="64" alt="Логотип магазина Глэйси">
     <nav class="header-navigation">
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
