--- a/ catalog.html
+++ b/ catalog.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header class="header-catalog">
-    <a href="index.html"><img src="img/Logotup.png" width="154" height="64" alt="Логотип магазина Глэйси"> </a>
+    <a href="index.html"><img src="img/Logo.png" width="154" height="64" alt="Логотип магазина Глэйси"> </a>
     <nav class="header-catalog-navigation">
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
