--- a/ catalog.html
+++ b/ catalog.html
@@ -14,11 +14,38 @@
         <li><a href="#">О Компании </a></li>
       </ul>
     </nav>
+
     <ul class="header-catalog-button">
       <li><button>лупа</button></li>
       <li><button>вход</button></li>
-      <li><button>2 товара</button></li>
+
+      <li class="header-catalog-button-basket">
+        <button>2 товара</button>
+
+        <form сlass="form-header-catalog" action="#" method="post">
+          <ul>
+            <li class="form-header-catalog-basket-1">
+              <p><img src="img/plombir-orange.jpg" width="33" height="33" alt="Пломбир сапелсиновым джемом"></p>
+                <p>Пломбир сапелсиновым джемом</p>
+                <p>1,5 кг*200 руб</p>
+                <p>300 руб</p>
+
+            </li>
+            <li class="form-header-catalog-basket-2">
+              <img src="img/plombir-strawberry.jpg"  width="33" height="33" alt="Клубничный пломбир с присыпкой из белогошоколада">
+              <p>Клубничный пломбир с присыпкой из белогошоколада</p>
+              <p>1,5 кг*300 руб</p>
+              <p>450 руб</p>
+            </li>
+          </ul>
+          <hr>
+          <p>Итого 750 руб</p>
+          <button class="form-header-catalog-button" type="submit">Оформить заказ</button>
+
+        </form>
+      </li>
     </ul>
+
   </header>
   <main сlass="main-catalog">
 
