--- a/ catalog.html
+++ b/ catalog.html
@@ -10,6 +10,13 @@
     <nav class="header-catalog-navigation">
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
+          <ul>
+            <li>Новинки</li>
+            <li><a href="#">Сливочное</a></li>
+            <li><a href="#">Щербеты</a></li>
+            <li><a href="#">Фруктовый лед</a></li>
+            <li><a href="#">Мелорин</a></li>
+          </ul>
         <li><a href="#">Доставка и оплата </a></li>
         <li><a href="#">О Компании </a></li>
       </ul>
@@ -165,6 +172,19 @@
       Сделано в HTML Academy © 2017
     </p>
   </footer>
+  <div class="popup">
+    <h2>Мы обязателно Вам ответим!</h2>
+    <form action="" method="">
+      <p>
+        <input type="text" name="name" placeholder="Как Вас зовут?"></p>
+        <p><input type="text" name="mail" placeholder="Ваша почта для ответа?"></p>
+        <p><textarea rows="5" cols="20" placeholder="Напишите что-нибудь.."></textarea>
+      </p>
+      <button type="button">Закрыть</button>
+      <button type="submit">Отправить</button>
+    </form>
+  </div>
+
 
 
 </body>
