--- a/ catalog.html
+++ b/ catalog.html
@@ -2,7 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Document</title>
+  <title>Каталог "Глэйси"</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <header class="header-catalog">
@@ -10,7 +12,7 @@
     <nav class="header-catalog-navigation">
       <ul>
         <li><a href="catalog.html">Каталог</a></li>
-          <ul>
+          <ul class="header-navigation-list">
             <li>Новинки</li>
             <li><a href="#">Сливочное</a></li>
             <li><a href="#">Щербеты</a></li>
@@ -22,8 +24,12 @@
       </ul>
     </nav>
 
-    <ul class="header-catalog-button">
-      <li>
+    <ul class="header-button">
+      <li class="header-button-search">
+
+        <button>
+          <img src="img/logo-magnifier.png" width="17" height="17" alt="лупа">
+        </button>
 
         <form class="header-button-search-form">
           <button type="submit">
@@ -33,8 +39,8 @@
           </form>
       </li>
       <li>
-        <button>
-        <img src="img/logo-input.png" width="21" height="19" alt="вход">вход
+        <button class="header-button-input">
+          вход
         </button>
 
         <form class="header-button-input-form" action="" method="post">
@@ -48,10 +54,10 @@
         </form>
       </li>
 
-      <li class="header-catalog-button-basket">
-        <button>2 товара</button>
+      <li>
+        <button class="header-button-basket">пусто</button>
 
-        <form сlass="form-header-catalog" action="#" method="post">
+       <!-- <form сlass="form-header-catalog" action="#" method="post">
           <ul>
             <li class="form-header-catalog-basket-1">
               <p><img src="img/plombir-orange.jpg" width="33" height="33" alt="Пломбир сапелсиновым джемом"></p>
@@ -71,7 +77,7 @@
           <p>Итого 750 руб</p>
           <button class="form-header-catalog-button" type="submit">Оформить заказ</button>
 
-        </form>
+        </form> -->
       </li>
     </ul>
 
@@ -90,77 +96,77 @@
     </div>
 
     <h1>Сливочное мороженное</h1>
-    <ul>
+    <ul class="main-catalog-list">
       <li>
         <p><img src="img/creamy-orange.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
         </p>
-        <p><b>310</b><span>₽/кг</span></p>
+        <p><b>310</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
       </li>
       <li>
         <p><img src="img/creamy-coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
         </p>
-        <p><b>380</b><span>₽/кг</span></p>
+        <p><b>380</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
       </li>
       <li>
         <p><img src="img/creamy-strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
         </p>
-        <p><b>355</b><span>₽/кг</span></p>
+        <p><b>355</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </li>
       <li>
         <p><img src="img/creamy-cream.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
         </p>
-        <p><b>415</b><span>₽/кг</span></p>
+        <p><b>415</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
       </li>
       <li>
         <p><img src="img/creamy-cowberry.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
         </p>
-        <p><b>325</b><span>₽/кг</span></p>
+        <p><b>325</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочное с брусничным джемом</a>
       </li>
       <li>
         <p><img src="img/creamy-blueberry.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
         </p>
-        <p><b>410</b><span>₽/кг</span></p>
+        <p><b>410</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочно-черничное с цельными ягодами черники</a>
       </li>
       <li>
         <p><img src="img/creamy-lemon.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
         </p>
-        <p><b>375</b><span>₽/кг</span></p>
+        <p><b>375</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
       </li>
       <li>
         <p><img src="img/creamy-chocolatechip.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
         </p>
-        <p><b>320</b><span>₽/кг</span></p>
+        <p><b>320</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочное с шоколадной стружкой</a>
       </li>
       <li>
         <p><img src="img/creamy-vanilla.jpg" width="267" height="267" alt="ливочно-ванильное с кусочками шоколада">
         </p>
-        <p><b>440</b><span>₽/кг</span></p>
+        <p><b>440</b><span><b>₽</b>/кг</span></p>
         <a href="#">С#ливочно-ванильное с кусочками шоколада</a>
       </li>
       <li>
         <p><img src="img/creamy-menthol.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
         </p>
-        <p><b>435</b><span>₽/кг</span></p>
+        <p><b>435</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочноe с ментоловым сиропом</a>
       </li>267
       <li>
         <p><img src="img/creamy-piecechocolate.pg.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
         </p>
-        <p><b>355</b><span>₽/кг</span></p>
+        <p><b>355</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочное с кусочками черного шоколада</a>
       </li>
       <li>
         <p><img src="img/creamy-mint.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
         </p>
-        <p><b>420</b><span>₽/кг</span></p>
+        <p><b>420</b><span><b>₽</b>/кг</span></p>
         <a href="#">Сливочное с мятным сиропом</a>
       </li>
     </ul>
