Правка задания сетки-обернул знак "рубль" в тег <b>

--- a/ catalog.html
+++ b/ catalog.html
@@ -91,73 +91,73 @@
         <li>
           <p><img src="img/creamy-orange.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
           </p>
-          <p><b>310</b><span>₽</кг</span></p>
+          <p><b>310</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         </li>
         <li>
           <p><img src="img/creamy-coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
           </p>
-          <p><b>380</b><span>₽/кг</span></p>
+          <p><b>380</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочно-кофейное с кусочками шоколада</a>
         </li>
         <li>
           <p><img src="img/creamy-strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
           </p>
-          <p><b>355</b><span>₽/кг</span></p>
+          <p><b>355</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </li>
         <li>
           <p><img src="img/creamy-cream.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
           </p>
-          <p><b>415</b><span>₽/кг</span></p>
+          <p><b>415</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
         </li>
         <li>
           <p><img src="img/creamy-cowberry.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
           </p>
-          <p><b>325</b><span>₽/кг</span></p>
+          <p><b>325</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочное с брусничным джемом</a>
         </li>
         <li>
           <p><img src="img/creamy-blueberry.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
           </p>
-          <p><b>410</b><span>₽/кг</span></p>
+          <p><b>410</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочно-черничное с цельными ягодами черники</a>
         </li>
         <li>
           <p><img src="img/creamy-lemon.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
           </p>
-          <p><b>375</b><span>₽/кг</span></p>
+          <p><b>375</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
         </li>
         <li>
           <p><img src="img/creamy-chocolatechip.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
           </p>
-          <p><b>320</b><span>₽/кг</span></p>
+          <p><b>320</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочное с шоколадной стружкой</a>
         </li>
         <li>
           <p><img src="img/creamy-vanilla.jpg" width="267" height="267" alt="ливочно-ванильное с кусочками шоколада">
           </p>
-          <p><b>440</b><span>₽/кг</span></p>
+          <p><b>440</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочно-ванильное с кусочками шоколада</a>
         </li>
         <li>
           <p><img src="img/creamy-menthol.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
           </p>
-          <p><b>435</b><span>₽/кг</span></p>
+          <p><b>435</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочноe с ментоловым сиропом</a>
         </li>267
         <li>
           <p><img src="img/creamy-piecechocolate.pg.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
           </p>
-          <p><b>355</b><span>₽/кг</span></p>
+          <p><b>355</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочное с кусочками черного шоколада</a>
         </li>
         <li>
           <p><img src="img/creamy-mint.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
           </p>
-          <p><b>420</b><span>₽/кг</span></p>
+          <p><b>420</b><span><b>₽</b>/кг</span></p>
           <a href="#">Сливочное с мятным сиропом</a>
         </li>
       </ul>
