--- a/index.html
+++ b/index.html
@@ -4,194 +4,170 @@
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body>
-    <header class="header">
-      <div class="header-container">
-        <div class="header-container-1">
+      <header class="header">
+        <div class="header-container">
+          <div class="header-container-1">
+  					<img src="img/Logo.png" width="154" height="64" alt="Логотип магазина Глэйси">
+  					<nav class="header-navigation">
+  						<ul class="header-navigation-site">
+  			        <li>
+  			          <a href="catalog.html">Каталог</a>
+  								<ul class="header-navigation-list">
+  									<li>Новинки</li>
+  									<li><a href="#">Сливочное</a></li>
+  			            <li><a href="#">Щербеты</a></li>
+  			            <li><a href="#">Фруктовый лед</a></li>
+  			            <li><a href="#">Мелорин</a></li>
+  								</ul>
+  							</li>
+  			        <li><a href="#">Доставка и оплата </a></li>
+  			        <li><a href="#">О Компании </a></li>
+  			      </ul>
+  			    </nav>
+  			  </div>
+  			  <div class="header-container-2">
+  			    <ul class="header-button">
+  			      <li class="header-button-search">
 
-    <img src="img/Logo.png" width="154" height="64" alt="Логотип магазина Глэйси">
+  							 <button class="magnifier"></button>
+                  <form class="header-button-search-form" action="#" method="post">
+  		              <input type="text" name="name" placeholder="Что ищем?">
+  		            </form>
 
-    <nav class="header-navigation">
+  		        </li>
+  		        <li>
 
-      <ul class="header-navigation-site">
-        <li>
-          <a href="catalog.html">Каталог</a>
+  		          <button class="header-button-input">
+  		            Вход
+  		          </button>
 
-            <button class="header-presence-button">Каталог</button>
+  								<form class="header-input-form" action="" method="post">
+  									<p><input type="text" name="name" placeholder="Электронная почта">
+  									</p>
+  			          	<p><input type="text" name="passead" placeholder="Пароль"></p>
+  									<div class="blok-2">
+  					          <p>
+  					            <button class="form-button-input" type="submit">Войти</button>
+  					          </p>
+  				            <div class="blok-1">
+  					            <a href="#">Забыли пароль?</a>
+  					            <a href="#">Новая регистрация</a>
+  					         	</div>
+  				        	</div>
+  				        </form>
 
-          <ul class="header-navigation-list">
-
-            <li>Новинки</li>
-
-            <li><a href="#">Сливочное</a></li>
-            <li><a href="#">Щербеты</a></li>
-            <li><a href="#">Фруктовый лед</a></li>
-            <li><a href="#">Мелорин</a></li>
-
-          </ul>
-
-        </li>
-        <li><a href="#">Доставка и оплата </a></li>
-        <li><a href="#">О Компании </a></li>
-      </ul>
-    </nav>
-  </div>
-  <div class="header-container-2">
-    <ul class="header-button">
-      <li class="header-button-search">
-
-        <button class="magnifier">
-          <img src="img/logo-magnifier.png" width="17" height="17" alt="лупа">
-        </button>
-
-          <form class="header-button-search-form" action="#" method="post">
-            <button class="submit"></button>
-            <input type="text" name="name" placeholder="Что ищем?">
-          </form>
-        </li>
-        <li>
-          <button class="header-button-input">
-            Вход
-          </button>
-
-          <button class="header-button-inputsait">Вход</button>
-
-        <form class="header-button-input-form" action="" method="post">
-
-          <p><input type="text" name="name" placeholder="Электронная почта"></p>
-          <p><input type="text" name="passead" placeholder="Пароль"></p>
-
-          <div class="blok-2">
-          <p>
-            <button class="form-input" type="submit">Войти</button>
-          </p>
-            <div class="blok-1">
-            <a href="#">Забыли пароль?</a>
-            <a href="#">Новая регистрация</a>
-         </div>
-        </div>
-        </form>
-      </li>
-
-      <li>
-        <button class="header-button-basket">Пусто</button>
-      </li>
-    </ul>
-  </div>
-    </div>
-  </header>
-
-  <div class="wrepper">
-  <section class="activities">
-    <div class="activities-container">
-    <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-    <div class="activities-container-wrepper">
-      <div class="activities-container-wrepper-1">
-    <div class="activities-item">
-      <img src="img/logo-cream.png" width="49" height="49">
-      <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
-      </p>
-    </div>
-    <div class="activities-item">
-      <img src="img/logo-leaf.png" width="49" height="49">
-      <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
-      </p>
+  			      </li>
+  						<li>
+  			        <button class="header-button-basket">Пусто</button>
+  			      </li>
+  			    </ul>
+  			  </div>
       </div>
-      </div>
-        <div class="activities-container-wrepper-2">
-      <div class="activities-item-3">
-      <img src="img/logo-cow.png" width="49" height="49">
-      <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
-      </p>
-      </div>
-      <div class="activities-item-3">
-      <img src="img/logo-thermometer.png" width="49" height="49">
-      <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
-      </p>
-      </div>
-      </div>
-      </div>
-      </div>
-    </section>
-    <div class="wrapper-news">
-  <div class="newsblock">
-    <p>Новое в нашем блоге</p>
-    <a href="#"><h2>10 способов сервировк фруктовых щербетов<br>к столу</h2></a>
-  </div>
+    </header>
+    <div class="wrepper">
+    	<section class="activities">
 
-  <div class="newsletter">
-    <div class="newsletter-wrapper">
+      	<div class="activities-container">
+        	<h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+        	<div class="activities-container-wrepper">
+    	    <div class="activities-container-wrepper-1">
+    		    <div class="activities-item">
+    		      <img src="img/logo-cream.png" width="49" height="49">
+    		      <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
+    		      </p>
+    		    </div>
+    		    <div class="activities-item">
+    		      <img src="img/logo-leaf.png" width="49" height="49">
+    		      <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+    		      </p>
+    	      </div>
+          </div>
+            <div class="activities-container-wrepper-2">
+    		      <div class="activities-item-3">
+    			      <img src="img/logo-cow.png" width="49" height="49">
+    			      <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+    			      </p>
+    		      </div>
+    		      <div class="activities-item-3">
+    			      <img src="img/logo-thermometer.png" width="49" height="49">
+    			      <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+    			      </p>
+    	      	</div>
+          	</div>
+        	</div>
+      	</div>
+      </section>
+        <div class="wrapper-news">
+    		  <div class="newsblock">
+    		    <p>Новое в нашем блоге</p>
+    		    <a href="#"><h2>10 способов сервировки <br>фруктовых щербетов<br> к столу</h2></a>
+    		  </div>
+    			<div class="newsletter">
+        	<div class="newsletter-wrapper">
+    				<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
+        		</p>
+    		    <form class="newsletter-form" action="#" type="post">
+    		      <input type="text" name="mail" placeholder="Электронная почта">
+    		      <button type="submit">Отправить</button>
+    		    </form>
+      		</div>
+  			</div>
+  		</div>
+  	</div>
+  	  <footer class="footer">
+  	    <div class="wrapper-footer">
+  				<div class="footer-social">
+  		      <ul>
+  		        <li>
+  		          <a class="social-button" href="#"><img src="img/logo-tw.png" width="32" height="32" alt="Твиттер"></a>
+  		        </li>
+  		        <li>
+  		          <a class="social-button" href="#"><img src="img/logo-instagram.png" width="32" height="32" alt="Инстаграм"></a>
+  		        </li>
+  		        <li>
+  		          <a class="social-button" href="#"><img src="img/logo-f.png" width="32" height="32" alt="Фейсбук"></a>
+  		        </li>
+  		        <li>
+  		          <a class="social-button" href="#"><img src="img/logo-vk.png" width="32" height="32" alt="В контакте"></a>
+  		        </li>
+  		     	</ul>
+  	    	</div>
+  		    <div class="footer-documentation">
+  		      <ul>
+  		        <div class="wrapper-documentation-1">
+  			        <li><a href="#">Для поставщиков</a></li>
+  			        <li><a href="#">О производств</a></li>
+  		        </div>
+  		        <div class="wrapper-documentation-2">
+  			        <li><a href="#">Наши документы</a></li>
+  			        <li><a href="#">Экологические стандарты</a></li>
+  		      	</div>
+  		      </ul>
+  		    </div>
+  		    <div class="footer-copyright">
+  					<img src="img/logo-htmlacademy-small.png" width="108" height="39" alt="HTML Academy">
+  		      <p>Сделано в HTML Academy © 2017
+  		    	</p>
+  		    </div>
+  	    </div>
+  	  </footer>
 
-    <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
-    </p>
-    <form class="newsletter-form" action="#" type="post">
-      <input type="text" name="mail" placeholder="Электронная почта">
-      <button type="submit">Отправить</button>
-    </form>
-  </div>
-</div>
-</div>
-</div>
-  <footer class="footer">
-    <div class="wrapper-footer">
+  		  <div class="popup">
+  				<form class="popup-form" action="#" method="post">
+  		      <h2>Мы обязателно Вам ответим!</h2>
+  		      <p>
+  		      <input type="text" name="name" placeholder="Как Вас зовут?">
+  		      </p>
+  		      <p><input type="text" name="mail" placeholder="Ваша почта для ответа?"></p>
+  					<p><textarea rows="5" cols="20" placeholder="Напишите что-нибудь.."></textarea>
+  		      </p>
+  		      <button type="submit">Отправить</button>
+  					<div class="close"></div>
+  		    </form>
+  			</div>
+  		</body>
+  	</html>
 
-    <div class="footer-social">
-      <ul>
-                <li>
-                  <a class="social-button" href="#"><img src="img/logo-tw.png" width="32" height="32" alt="Твиттер"></a>
-                </li>
-                <li>
-                  <a class="social-button" href="#"><img src="img/logo-instagram.png" width="32" height="32" alt="Инстаграм"></a>
-                </li>
-                <li>
-                  <a class="social-button" href="#"><img src="img/logo-f.png" width="32" height="32" alt="Фейсбук"></a>
-                </li>
-                <li>
-                  <a class="social-button" href="#"><img src="img/logo-vk.png" width="32" height="32" alt="В контакте"></a>
-                </li>
-       </ul>
-    </div>
-    <div class="footer-documentation">
-      <ul>
-        <div class="wrapper-documentation-1">
-        <li><a href="#">Для поставщиков</a></li>
-        <li><a href="#">О производств</a></li>
-        </div>
-        <div class="wrapper-documentation-2">
-        <li><a href="#">Наши документы</a></li>
-        <li><a href="#">Экологические стандарты</a></li>
-      </div>
-      </ul>
-    </div>
-    <div class="footer-copyright">
-
-      <img src="img/logo-htmlacademy-small.png" width="108" height="39" alt="HTML Academy">
-      <p>Сделано в HTML Academy © 2017
-    </p>
-    </div>
-    </div>
-  </footer>
-
-  <div class="popup">
-
-    <form class="popup-form" action="#" method="post">
-      <h2>Мы обязателно Вам ответим!</h2>
-      <p>
-      <input type="text" name="name" placeholder="Как Вас зовут?">
-      </p>
-      <p><input type="text" name="mail" placeholder="Ваша почта для ответа?"></p>
-
-        <p><textarea rows="5" cols="20" placeholder="Напишите что-нибудь.."></textarea>
-      </p>
-      <button type="submit">Отправить</button>
-
-      <div class="close"></div>
-    </form>
-
-  </div>
-
-
-</body>
-</html>
