--- a/catalog.html
+++ b/catalog.html
@@ -12,9 +12,9 @@
       <div class="header-container-1">
         <a href="#"><img src="img/Logo.png" width="154" height="64" alt="Логотип магазина Глэйси"></a>
         <nav class="header-navigation">
-          <ul class="header-catalog-site">
-            <li>
-              <a href="index.html">Каталог</a>
+          <ul class="header-navigation-site">
+            <li class="catalog">
+              <a class="button-catalog" href="index.html">Каталог</a>
             </li>
             <li><a href="#">Доставка и оплата </a></li>
             <li><a href="#">О Компании </a></li>
@@ -24,20 +24,35 @@
       <div class="header-container-2">
         <ul class="header-button">
           <li class="header-button-search">
-            <button class="magnifier-catalog">
-             </button>
+            <button class="magnifier"></button>
+            <form class="header-button-search-form" action="#" method="post">     <input type="text" name="name" placeholder="Что ищем?">
+            </form>
           </li>
           <li>
-            <button class="header-button-catalog-input">
+            <button class="header-button-input">
             вход
             </button>
+            <form class="header-input-form" action="" method="post">
+              <p><input type="text" name="name" placeholder="Электронная почта">
+              </p>
+              <p><input type="text" name="passead" placeholder="Пароль"></p>
+              <div class="blok-2">
+                <p>
+                  <button class="form-button-input" type="submit">Войти</button>
+                </p>
+                <div class="blok-1">
+                  <a href="#">Забыли пароль?</a>
+                  <a href="#">Новая регистрация</a>
+                </div>
+              </div>
+            </form>
           </li>
           <li class="form-basket">
-            <button class="header-button-basket">Пусто</button>
+            <button class="header-button-basket">2 товара</button>
             <form class="header-form-catalog" action="#" method="post">
               <ul>
                 <li class="header-form-catalog-basket-1">
-                  
+
                   <p><img src="img/plombir-orange.jpg" width="33" height="33" alt="Пломбир с апелсиновым джемом"></p>
                   <p>Пломбир с апелсиновым джемом</p>
                   <p>1,5 кг*<span class="price">200</span> руб</p>
