--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   					<img src="img/Logo.png" width="154" height="64" alt="Логотип магазина Глэйси">
   					<nav class="header-navigation">
   						<ul class="header-navigation-site">
-  			        <li>
+  			        <li class="catalog-saite">
   			          <a href="catalog.html">Каталог</a>
   								<ul class="header-navigation-list">
   									<li>Новинки</li>
@@ -31,33 +31,28 @@
   			  <div class="header-container-2">
   			    <ul class="header-button">
   			      <li class="header-button-search">
-
-  							 <button class="magnifier"></button>
-                  <form class="header-button-search-form" action="#" method="post">
-  		              <input type="text" name="name" placeholder="Что ищем?">
+                <button class="magnifier"></button>
+                  <form class="header-button-search-form" action="#" method="post"> <input type="text" name="name" placeholder="Что ищем?">
   		            </form>
-
-  		        </li>
+              </li>
   		        <li>
-
-  		          <button class="header-button-input">
+                <button class="header-button-input">
   		            Вход
   		          </button>
-
-  								<form class="header-input-form" action="" method="post">
-  									<p><input type="text" name="name" placeholder="Электронная почта">
-  									</p>
-  			          	<p><input type="text" name="passead" placeholder="Пароль"></p>
-  									<div class="blok-2">
-  					          <p>
-  					            <button class="form-button-input" type="submit">Войти</button>
-  					          </p>
-  				            <div class="blok-1">
-  					            <a href="#">Забыли пароль?</a>
-  					            <a href="#">Новая регистрация</a>
-  					         	</div>
-  				        	</div>
-  				        </form>
+                <form class="header-input-form" action="" method="post">
+									<p><input type="text" name="name" placeholder="Электронная почта">
+									</p>
+			          	<p><input type="text" name="passead" placeholder="Пароль"></p>
+									<div class="blok-2">
+					          <p>
+					            <button class="form-button-input" type="submit">Войти</button>
+					          </p>
+				            <div class="blok-1">
+					            <a href="#">Забыли пароль?</a>
+					            <a href="#">Новая регистрация</a>
+					         	</div>
+				        	</div>
+				        </form>
 
   			      </li>
   						<li>
