--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
+  <div class="wrepper-sliader">
       <header class="header">
         <div class="header-container">
           <div class="header-container-1">
@@ -62,6 +63,77 @@
   			  </div>
       </div>
     </header>
+    <main>
+      <section class="slider">
+        <div class="slider-controls">
+            <label for="product-1">Первый</label>
+            <label for="product-2">Второй</label>
+            <label for="product-3">Третий</label>
+          </div>
+         <ul class="slider-list">
+            <li class="slider-item slide" id="slide1">
+              <h3 class="slide-title">
+                Крем-брюле и пломбир с малиновым джемом
+              </h3>
+              <a class="button slide-button" href="#">Давайте оба!</a>
+            </li>
+            <li class="slider-item slide" id="slide2">
+              <h3 class="slide-title">
+                Шоколадный пломбир и лимонный сорбет
+              </h3>
+              <a class="button slide-button" href="#">Давайте оба!</a>
+            </li>
+            <li class="slider-item slide" id="slide3">
+              <h3 class="slide-title">
+                Пломбир с помадкой и клубничный щербет
+              </h3>
+              <a class="button slide-button" href="#">Давайте оба!</a>
+            </li>
+          </ul>
+        </section>
+         <section class="bonus">
+        <div class="bonus-1">
+          <h2>Малинка даром!</h2>
+          <p>При покупке 2 кг любого фруктового мороженого, добавим<br> в ваш заказ банку малинового варенья бесплатно.</p>
+          <a href="#">Хочу варенье!</a>
+        </div>
+        <div class="bonus-2">
+          <h2>Шоколадки даром!</h2>
+          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку<br> вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+          <a class="want" href="#">Хочу шоколадки!</a>
+        </div>
+       </section>
+        <div class="heath-wrepper">
+      <section class="main-heath">
+        <ul class="heath">
+          <li>
+            <p> <img src="img/hit-orange .jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            </p>
+            <p><b>310</b><span>₽/кг</span></p>
+            <a href="#">Сливочное с апельсиновым<br> джемом и цитрусовой стружкой</a>
+          </li>
+          <li>
+            <p><img src="img/hit- coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+            </p>
+            <p><b>380</b><span>₽/кг</span></p>
+            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          </li>
+          <li>
+            <p><img src="img/hit-strawberry .jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+            </p>
+            <p><b>355</b><span>₽/кг</span></p>
+            <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          </li>
+          <li>
+            <p><img src="img/hit-cream.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+            </p>
+            <p><b>415</b><span>₽/кг</span></p>
+            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          </li>
+        </ul>
+      </section>
+    </div>
+
     <div class="wrepper">
     	<section class="activities">
 
@@ -112,6 +184,21 @@
   			</div>
   		</div>
   	</div>
+    <div id="map">
+      <img src="img/pin.png" width="80" height="142">
+      <img src="img/Тень.png">
+      <img src="img/map.png" width="1250" height="430" alt="ул.Большая  Конюшенная 19/8,Санкт-Петербург">
+      <div class="address">
+        <p>Адрес главного офиса<br>
+        и офлайн-магазина:</p>
+        <p><h2>ул.Большая  Конюшенная 19/8,Санкт-Петербург</h2></p>
+        <p>Для заказов по телефону:</p>
+        <p class="tell">8 812 450-25-25<br>
+        <span class="time">(с 10 до 20 ежедневно)</span></p>
+       <button class="address-button" type="submit">Форма обратной связи</button>
+      </div>
+    </div>
+  </main>
   	  <footer class="footer">
   	    <div class="wrapper-footer">
   				<div class="footer-social">
@@ -149,7 +236,7 @@
   		    </div>
   	    </div>
   	  </footer>
-
+    </div>
   		  <div class="popup">
   				<form class="popup-form" action="#" method="post">
   		      <h2>Мы обязателно Вам ответим!</h2>
@@ -160,9 +247,24 @@
   					<p><textarea rows="5" cols="20" placeholder="Напишите что-нибудь.."></textarea>
   		      </p>
   		      <button type="submit">Отправить</button>
-  					<div class="close"></div>
+  					<button class="close" type="submit">Закрыть</button>
   		    </form>
   			</div>
+        <script>
+   var button = document.querySelector(".address-button");
+   var popup = document.querySelector(".popup");
+   var close = popup.querySelector(".popup button::before");
+
+   button.addEventListener("click", function (evt) {
+    evt.preventDefault();
+    popup.classList.add("popup-clik");
+  });
+   close.addEventListener("click", function (evt) {
+    evt.preventDefault();
+    popup.classList.remove("popup-clik");
+  });
+
+    </script>
   		</body>
   	</html>
 
